--- a/basis/header.html
+++ b/basis/header.html
@@ -94,7 +94,7 @@ w-full  grid grid-cols-[50vw,50vw]" dir="rtl">
                    </span>
                </div>
                <div class="Bottom w-full flex justify-center items-center">
-                   <div class="Contact w-full flex flex-col gap-2">
+                   <div class="Contact mt-[4em] w-full flex flex-col gap-2">
                        <div class="Row w-full flex justify-center items-center">
                        <div class="socials w-full flex flex-col gap-2">
                            <a href="http://www.gbm.ir" alt="retailShow" title="retailShow" class="social w-auto flex justify-center text-center font-IRANSansWeb300 font-light text-xs leading-[19.2px] text-white">
@@ -200,8 +200,8 @@ w-full  grid grid-cols-[50vw,50vw]" dir="rtl">
                        </div>
                    </div>
                </div>
-               <div class="Menu_bg Is_top fixed w-full h-[50vh] bg-main-blue top-0 z-[-1]" ></div>
-               <div class="Menu_bg Is_bottom fixed w-full h-[50vh] bg-main-blue bottom-0 z-[-1]"></div>
+               <div class="Menu_bg Is_top fixed w-full h-[51svh] bg-main-blue top-0 z-[-1]" ></div>
+               <div class="Menu_bg Is_bottom fixed w-full h-[51svh] bg-main-blue bottom-0 z-[-1]"></div>
            </div>
        </div>
        <div class="Left w-full flex justify-end items-center ">
