--- a/basis/about.html
+++ b/basis/about.html
@@ -143,7 +143,7 @@
                 <layout>
                     @child
                 </layout>
-                <face filter="TypeID=150">
+                <face filter="TypeID=128">
             
               <h2 class="font-IRANSansWeb500 relative duration-700 translate-y-[100%] mr-[.5em]
               font-medium text-base leading-25.04 text-darkBlue">
@@ -183,7 +183,7 @@
             <div class="ov overlay [&.hide]:opacity-0 [&.hide]:pointer-events-none duration-1000
              absolute w-full h-full bg-[#0000004D] pointer-events-none"></div>
             <div class="play-popup-container [&.hide]:opacity-0 [&.hide]:pointer-events-none duration-1000 overlay w-[55px] h-[55px] absolute z-1 cursor-pointer">
-                <div class="play-popup-btn w-full h-full relative flex items-center justify-center" data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;app_id=122963">
+                <div class="play-popup-btn w-full h-full relative flex items-center justify-center" data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                     <svg xmlns="http://www.w3.org/2000/svg" width="153.417" height="153.417" viewBox="0 0 153.417 153.417">
                         <g id="Group_457" data-name="Group 457" transform="translate(-1061.792 -431.792)">
                         <g id="Ellipse_1" data-name="Ellipse 1" transform="translate(1063 433)" fill="none" stroke="#fff" stroke-width="1" opacity="0.3">
