--- a/basis/contact.html
+++ b/basis/contact.html
@@ -106,8 +106,8 @@
                         </div>
                         <button type="submit" class="ShowBTN w-full group/btn rounded-[5px] mt-[1em]
                        
-                        py-[.4em] bg-mainBlue flex justify-center items-center gap-2 schemaBtn" data-btn-add data-btn-submit="">
-                           <span class="Text font-IRANSansWeb700 font-bold text-sm text-white leading-21.91">
+                        py-[.4em] bg-gray-bg flex justify-center items-center gap-2 schemaBtn" data-btn-add data-btn-submit="">
+                           <span class="Text font-IRANSansWeb700 font-bold text-sm text-black leading-21.91">
                             ثبت 
                            </span>
                    </button>
