--- a/basis/etelielist.html
+++ b/basis/etelielist.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="[##cms.cms.cdn##]/css/outputMobile.css">
 </head>
 <body>
-    <main class="etelaeyieList " dir="rtl">
+    <main class="etelaeyieList overflow-hidden " dir="rtl">
         <basis core="call" file="header1.inc" pageindex="[##cms.cms.pageindex##]" />
       
         <div class="EtelaeiListContents w-90p mx-auto mt-[5em] flex flex-col">
@@ -55,8 +55,7 @@
                 <div class="EtelaeiLists w-full  flex flex-col gap-[1em] mb-[5em]">
                     <basis core="print" datamembername="db.list-etelaeyie">
                         <face>
-                    <a href="@link" alt="@title" title="@title" class="EtalaeiItem group/EtalaeiItem w-full
-                     flex relative justify-center opacity-0 translate-y-[100%] duration-1000 flex-col gap-3 border-b border-pink pb-[.5em]
+                    <a href="@link" alt="@title" title="@title" class="EtalaeiItem group/EtalaeiItem w-full flex relative justify-center opacity-0 translate-y-[100%] duration-1000 flex-col gap-3 border-b border-pink pb-[.5em]
                      items-center overflow-hidden">
                      <div class="IMG w-full flex justify-center">
                         <img src="/@00268X00268prp" alt="@title" title="@title" class="w-full object-cover">
