--- a/basis/posterlist.html
+++ b/basis/posterlist.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="[##cms.cms.cdn##]/css/outputMobile.css">
 </head>
 <body>
-    <main class="posterList " dir="rtl">
+    <main class="posterList overflow-hidden" dir="rtl">
         <basis core="call" file="header1.inc" pageindex="[##cms.cms.pageindex##]" />
       
         <div class="posterListContents w-90p mx-auto mt-[5em] flex flex-col">
