--- a/basis/header.html
+++ b/basis/header.html
@@ -21,7 +21,7 @@ w-full  grid grid-cols-[50vw,50vw]" dir="rtl">
                    
              </span>
     
-           <div class="Menu_Bar fixed top-0 left-0 w-[100vw] h-[100vh] [&.OP]:grid
+           <div class="Menu_Bar fixed top-0 left-0 w-[100vw] h-[100vh] [&.OP]:!grid
             z-2 hidden grid-rows-[65vh,2vh,27vh]">
                <div class="Top w-full flex justify-center items-center">
                    <nav class="Menu w-full flex justify-center">
