--- a/basis/posterShow.html
+++ b/basis/posterShow.html
@@ -129,9 +129,9 @@
                         </basis>
                         <basis core="print" datamembername="db.galleryLink2">
                             <face filter="TypeID=254">
-                                <div data-videoUrl="@Answer" class="play-popup-container playVideoOpen playbtn w-[55px] h-[55px] absolute cursor-pointer">
+                                <div data-videoUrl="@largetext" class="play-popup-container playVideoOpen playbtn w-[55px] h-[55px] absolute cursor-pointer">
                                     <div class="play-popup-btn relative flex items-center justify-center"
-                                        data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                        data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55"
                                             viewBox="0 0 153.417 153.417">
                                             <g id="Group_457" data-name="Group 457"
@@ -224,9 +224,9 @@
                                                 <img class="w-full" src="/[##rep.current.largeIMG##]" alt="" />
                                                 <basis core="print" datamembername="db.galleryLink1001">
                                                     <face filter="TypeID=254">
-                                                        <div data-videoUrl="@Answer" class="play-popup-container  playbtn w-[55px] h-[55px] absolute cursor-pointer">
+                                                        <div data-videoUrl="@largetext" class="play-popup-container  playbtn w-[55px] h-[55px] absolute cursor-pointer">
                                                             <div class="play-popup-btn relative flex items-center justify-center"
-                                                                data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                                                data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="55"
                                                                     height="55" viewBox="0 0 153.417 153.417">
                                                                     <g id="Group_457" data-name="Group 457"
@@ -345,6 +345,17 @@
                                                         <div class="para font-IRANSansWeb400 text-sm">
                                                             <p>[##rep.current.description##]</p>
                                                         </div>
+                                                        <img class="w-full" src="/[##rep.current.largeIMG##]" alt="">
+
+                                                        <basis core="print" datamembername="db.posterGallery1001">
+                                                           
+                                                            <face filter="RowNumber=1">
+                                                                <div class="imgS w-full mt-5">
+
+                                                                    <img class="w-full" src="/@largeIMG" alt="">
+                                                                </div>
+                                                            </face>
+                                                        </basis>
                                                     </div>
                                                 </div>
                                             </div>
@@ -380,7 +391,7 @@
                                         <div
                                             class="play-popup-container playbtn w-[55px] h-[55px] absolute cursor-pointer">
                                             <div class="play-popup-btn relative flex items-center justify-center"
-                                                data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                                data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55"
                                                     viewBox="0 0 153.417 153.417">
                                                     <g id="Group_457" data-name="Group 457"
@@ -452,7 +463,7 @@
                     </basis>
                     
                     </div>
-                    <div class="btns mt-5 z-1 flex justify-between gap-x-6 bottom-0 left-0 right-0" dir="rtl">
+                    <div class="btns mt-5 z-1 flex justify-between gap-x-2 bottom-0 left-0 right-0" dir="rtl">
                         <div class="npBtns flex items-center gap-x-2">
                             <div class="nextRight cursor-pointer">
                                 <svg width="42" height="42" viewBox="0 0 42 42" fill="none"
@@ -582,7 +593,7 @@
                         </div>
                         <div class="play-popup-container playbtn w-[55px] h-[55px] absolute cursor-pointer">
                             <div class="play-popup-btn relative flex items-center justify-center"
-                                data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55"
                                     viewBox="0 0 153.417 153.417">
                                     <g id="Group_457" data-name="Group 457" transform="translate(-1061.792 -431.792)">
@@ -706,7 +717,7 @@
                             </div>
                             <div class="play-popup-container thumbBtn w-[64px] h-[64px] absolute cursor-pointer">
                                 <div class="play-popup-btn relative flex items-center justify-center"
-                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63"
                                         viewBox="0 0 153.417 153.417">
                                         <g id="Group_457" data-name="Group 457"
@@ -757,7 +768,7 @@
                             <face filter="TypeID=254">
                                 <div class="swiper-slide flex items-center justify-center">
                                     <div class="imgS w-full">
-                                        <video class="w-full object-cover" src="@Answer"></video>
+                                        <iframe class="w-full object-cover" src="@largetext"></iframe>
                                     </div>
                                 </div>
                             </face>
@@ -797,13 +808,13 @@
             <div class="thumbContainer mt-28 w-90p mx-auto" dir="rtl">
                 <basis core="print" datamembername="db.posterGallery1002">
                     <face>
-                        <div class="thumbBox mb-8 flex items-center relative justify-center">
+                        <div class="thumbShowBox mb-8 flex items-center relative justify-center">
                             <div class="imgS">
                                 <img class="w-full" src="/@largeIMG" alt="" />
                             </div>
                             <div class="play-popup-container thumbBtn w-[64px] h-[64px] absolute cursor-pointer">
                                 <div class="play-popup-btn relative flex items-center justify-center"
-                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63"
                                         viewBox="0 0 153.417 153.417">
                                         <g id="Group_457" data-name="Group 457"
@@ -853,7 +864,7 @@
                             <face filter="TypeID=254">
                                 <div class="swiper-slide flex items-center justify-center">
                                     <div class="imgS w-full">
-                                        <video class="w-full object-cover" src="@Answer"></video>
+                                        <iframe class="w-full object-cover" src="@largetext"></iframe>
                                     </div>
                                 </div>
                             </face>
@@ -903,8 +914,8 @@
         <div class="w-svw mt-24 pb-20 h-[80vh]" dir="rtl">
             <div class="flex h-full items-center justify-center">
                 <div class="imgS w-full">
-                    <video class="w-full object-cover" src=""
-                       ></video>
+                    <iframe class="w-full object-cover" src=""
+                       ></iframe>
                 </div>
             </div>
         </div>
@@ -1117,7 +1128,7 @@
                             </div>
                             <div class="play-popup-container thumbBtn w-[64px] h-[64px] absolute cursor-pointer">
                                 <div class="play-popup-btn relative flex items-center justify-center"
-                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&amp;amp;app_id=122963">
+                                    data-video="https://player.vimeo.com/video/619757568?dnt=1&app_id=122963">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63"
                                         viewBox="0 0 153.417 153.417">
                                         <g id="Group_457" data-name="Group 457"
@@ -1168,7 +1179,7 @@
                             <face filter="TypeID=254">
                                 <div class="swiper-slide flex items-center justify-center">
                                     <div class="imgS h-full">
-                                        <video class="h-full object-cover" src="@Answer"></video>
+                                        <iframe class="h-full object-cover" src="@largetext"></iframe>
                                     </div>
                                 </div>
                             </face>
