--- a/basis/posterShow.html
+++ b/basis/posterShow.html
@@ -913,8 +913,8 @@
         </div>
         <div class="w-svw mt-24 pb-20 h-[80vh]" dir="rtl">
             <div class="flex h-full items-center justify-center">
-                <div class="imgS w-full">
-                    <iframe class="w-full object-cover" src=""
+                <div class="imgS h-full flex items-center justify-center w-full">
+                    <iframe class="w-full h-full object-cover" src=""
                        ></iframe>
                 </div>
             </div>
