--- a/basis/posterlist.html
+++ b/basis/posterlist.html
@@ -27,8 +27,8 @@
     <main class="posterList overflow-hidden" dir="rtl">
         <basis core="call" file="header1.inc" pageindex="[##cms.cms.pageindex##]" />
       
-        <div class="posterListContents w-90p mx-auto mt-[5em] flex flex-col">
-            <div class="Title-main  relative overflow-hidden w-max
+        <div class="posterListContents w-full mx-auto mt-[5em] flex flex-col">
+            <div class="Title-main w-90p mx-auto  relative overflow-hidden 
               flex justify-start gap-4 items-center my-[4em]">
 
                 <span class="line duration-700 absolute flex left-0 my-auto
@@ -48,7 +48,8 @@
             
             </div>
             <div class="listcontents w-full flex flex-col gap-[1em]">
-                <div class="posterLists w-full  flex flex-col gap-[2.5em] mb-[5em]">
+                <div class="bg"></div>
+                <div class="posterLists w-90p mx-auto  flex flex-col gap-[2.5em] mb-[5em]">
                     <basis core="print" datamembername="db.posterList">
                         <face>
                             <a class="opacity-0 translate-y-[100%] duration-1000 poster relative h-full flex items-center justify-center "
