--- a/basis/about.html
+++ b/basis/about.html
@@ -17,9 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>درباره‌ما</title>
     <meta name="description" content="درباره‌ما">
-    <link rel="stylesheet" href="[##cms.cms.cdn##]/css/outputMobile.css">
-    <link rel="stylesheet" href="[##cms.cms.cdn##]/css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="[##cms.cms.cdn##]/css/plyr.css" />
+   <basis core="call" file="styles-mobile.inc" />
 <style>
 .plyr {
 position:relative;
@@ -31,7 +29,7 @@ position:relative;
         <basis core="call" file="header1.inc" pageindex="[##cms.cms.pageindex##]"/>
        
        <div class="about-container w-full flex flex-col">
-      <section class="section-1 w-full flex justify-center items-center mt-[7vh] ">
+      <section class="section-1 w-full flex justify-center items-center mt-[4em] ">
         <div class="Banner-Container w-full flex justify-center items-center">
             <basis core="print" datamembername="db.aboutGallery">
                 <layout>
