--- a/basis/posterlist.html
+++ b/basis/posterlist.html
@@ -14,14 +14,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <basis core="print" datamembername="db.seolist">
-        <face>
-            <title>[##cms.seo.title|db.seolist.title##]</title>
-            <meta name="description" content="[##cms.seo.description|db.seolist.description##]" />
-        </face>
-    </basis>
-    <link rel="stylesheet" href="[##cms.cms.cdn##]/css/leaflet.css">
-    <link rel="stylesheet" href="[##cms.cms.cdn##]/css/outputMobile.css">
+
+   <title>لیست پوستر</title>
+            <meta name="description" content="لیست پوستر" />
+   
+   <basis core="call" file="styles-mobile.inc" />
 </head>
 <body>
     <main class="posterList overflow-hidden" dir="rtl">
@@ -52,11 +49,11 @@
                 <div class="posterLists w-90p mx-auto  flex flex-col gap-[2.5em] mb-[5em]">
                     <basis core="print" datamembername="db.posterList">
                         <face>
-                            <a class="opacity-0 translate-y-[100%] duration-1000 poster relative h-full flex items-center justify-center "
+                            <a aria-label="@title" class="opacity-0 translate-y-[100%] duration-1000 poster relative h-full flex items-center justify-center "
                             alt="@title" href="@link" title="@title">
                                <div class="imgS w-full relative z-2">
                                    <img class="w-full duration-500 object-cover "
-                                    src="@00279X00395prp" alt="@title" title="@title">
+                                    src="[##cms.cms.cdn##]/@00279X00395prp" alt="@title" title="@title">
                                </div>
                              
                            </a>
@@ -74,8 +71,7 @@
         </main>
 
         <basis core="call" file="script-mobile.inc" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-        <script src="[##cms.cms.cdn##]/_js/swiper.js"></script>
+        
         <script src="[##cms.cms.cdn##]/js/headerMobile-Dark.js"></script>
         <script src="[##cms.cms.cdn##]/js/posterlist-mobile.js"></script>
 
